--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .hero-button {
+    @apply px-6 py-2 mx-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-600 transition-all hover:border-yellow-500 hover:text-gray-400 cursor-pointer;
+  }
+}
