--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .hero-button {
-    @apply px-6 py-2 mx-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-600 transition-all hover:border-yellow-500 hover:text-gray-400 cursor-pointer;
+    @apply px-6 py-2 mx-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-600 transition-all hover:border-yellow-500 hover:text-gray-400 cursor-pointer my-1;
   }
 }
