Ui upto project is ready

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,20 @@
     @apply px-6 py-2 mx-2 border border-gray-900 rounded-full uppercase text-sm tracking-widest text-gray-600 transition-all hover:border-yellow-500 hover:text-gray-400 cursor-pointer my-1;
   }
 }
+.main::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.main::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background: rgb(94, 91, 91);
+  box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0, 0, 0, 0.3);
+}
+.main::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgb(42, 39, 39);
+  box-shadow: inset 0 0 1px 1px #dbe1ad;
+}
+.main::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to left, #25292e, #3f4246);
+}
