--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
 }
 .main::-webkit-scrollbar-track {
   border-radius: 10px;
+
   background: rgb(94, 91, 91);
   box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(0, 0, 0, 0.3);
 }
@@ -20,6 +21,7 @@
   border-radius: 10px;
   background: rgb(42, 39, 39);
   box-shadow: inset 0 0 1px 1px #dbe1ad;
+  overflow: hidden;
 }
 .main::-webkit-scrollbar-thumb:hover {
   background: linear-gradient(to left, #25292e, #3f4246);
